Fix Navbar hamburger bug on mobile

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -96,7 +96,7 @@
   border-radius: 3px;
   transition: 0.3s;
 }
-@media (max-width: 900px){
+@media (max-width: 1100px){
 
   .hamburger{
     display: flex;
